...
        <include
            android:id="@+id/header"
            layout="@layout/material_header"
            app:headlineText="@{@string/cooking_steps}" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/add_cooking_step_fab"
            style="@style/custom_floating_action_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/outline_horizontal"
            android:backgroundTint="?attr/colorPrimaryVariant"
            android:contentDescription="@string/add_cooking_step"
...
            app:layout_constraintBottom_toBottomOf="@id/header"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/header"
            app:tint="?attr/colorOnPrimary" />

        <TextView
            android:id="@+id/add_hint_text"
            style="@style/headline_3"
            android:layout_marginTop="50dp"
            android:paddingStart="@dimen/outline_horizontal"
            android:paddingEnd="100dp"
            android:text="@string/add_cooking_steps_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/header"
            tools:visibility="gone" />

        <ListView
            android:id="@+id/cooking_step_list_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:clipToPadding="false"
            android:divider="@drawable/custom_divider"
            android:overScrollFooter="@android:color/transparent"
            android:paddingTop="30dp"
...
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/header"
            tools:listitem="@layout/add_cooking_step_listitem" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/back_button"
            style="@style/secondary_button"
            android:layout_marginStart="@dimen/outline_horizontal"
            android:layout_marginTop="100dp"
            android:layout_marginBottom="20dp"
            android:text="@string/back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/next_button"
            style="@style/primary_button"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="@dimen/outline_horizontal"
            android:layout_marginBottom="20dp"
            android:text="@string/done"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <include
            android:id="@+id/loading_spinner"
            layout="@layout/loading_spinner_overlay"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
...
