...
        android:layout_height="wrap_content"
        tools:background="?attr/colorOnPrimary">

        <TextView
            android:id="@+id/cooking_step_label"
            style="@style/label"
            android:labelFor="@id/cooking_step_field"
            android:text="@string/label_cooking_step"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/cooking_step_field"
...
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cooking_step_field">

            <TextView
                android:id="@+id/cooking_step_time_label"
                style="@style/label"
                android:labelFor="@id/cooking_step_time_field"
                android:text="@string/label_cooking_step_time"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/cooking_step_time_field"
...
                android:inputType="numberDecimal"
                android:maxLength="3"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cooking_step_time_label" />

            <Spinner
                android:id="@+id/cooking_step_time_spinner"
                style="@style/spinner"
                android:layout_width="0dp"
                android:layout_marginStart="@dimen/default_space"
                android:spinnerMode="dropdown"
                app:layout_constraintBottom_toBottomOf="@id/cooking_step_time_field"
                app:layout_constraintEnd_toEndOf="parent"
...
            android:labelFor="@id/cooking_step_time_field"
            android:text="@string/related_ingredients"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/second_row_layout" />

        <TextView
            android:id="@+id/ingredients_text_view"
            style="@style/small_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:paddingStart="3dp"
            android:text="@string/add_via_button"
            android:textColor="@color/dark_gray"
            app:layout_constraintEnd_toStartOf="@id/edit_ingredients_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ingredients_label"
            tools:ignore="RtlSymmetry" />

        <ImageButton
            android:id="@+id/edit_ingredients_button"
...
