<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/dialog_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/round_corners"
        android:paddingBottom="20dp">

        <androidx.constraintlayout.widget.ConstraintLayout
...
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.85">

            <include
                android:id="@+id/form_content"
                layout="@layout/add_cooking_step_form_content" />

            <include
                android:id="@+id/ingredient_list_content"
                layout="@layout/add_cooking_step_ingredient_list"
                android:visibility="gone" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/add_button"
            style="@style/primary_button"
            android:layout_marginTop="@dimen/default_space"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cooking_step_form_wrapper"
            tools:text="@string/add" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/cancel_button"
            style="@style/invisible_button"
            android:layout_marginTop="@dimen/small_space"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/add_button"
            tools:text="@string/cancel" />
...
